@@ -36,12 +36,12 @@ class ControllerHelpersTest < ActionController::TestCase
     assert_equal '{"total":0,"rows":[],"page":1,"records":0}', @controller.json_for_jqgrid(records)
   end
 
-  test "json_for_grid with one record" do
+  test "json_for_grid with one record and id prefix" do
     tmp_record  = Invoice.create({:invid => 1, :invdate => '2011-01-01 00:00:00', :amount => 10, :tax => 1, :total => 11, :note => '' })
     records     = Invoice.paginate(:page => 1)
-    expected    = '{"total":1,"rows":[{"cell":["2011-01-01T00:00:00Z",10.0,11.0],"id":"2011-01-01T00:00:00Z"}],"page":1,"records":1}'
+    expected    = '{"total":1,"rows":[{"cell":["2011-01-01T00:00:00Z",10.0,11.0],"id":"mygrid_row_1"}],"page":1,"records":1}'
     Invoice.delete(tmp_record.id)
-    assert_equal expected, @controller.json_for_jqgrid(records, ['invdate', 'amount', 'total' ])
+    assert_equal expected, @controller.json_for_jqgrid(records, ['invdate', 'amount', 'total' ], {:id_column => 'invid', :id_prefix => 'mygrid_row_'})
   end
 
 
